hiding answer button

--- a/exercises/templates/exercises/menu.html
+++ b/exercises/templates/exercises/menu.html
@@ -39,7 +39,7 @@
         <h4 style="display: none;">Example question:</h4>
         <!-- <a id="preview-image" href="" target="_blank"><img /></a> -->
         <div id="exercise-div">
-            <iframe id="exercise-frame" onload="refresh_title();" frameborder="1" height="100%" width="80%"></iframe>
+            <iframe id="exercise-frame" onload="refresh_title();" frameborder="1" height="100%" width="630px"></iframe>
         </div>
     </div>
 
