Put both iframe and screenshot version in

--- a/exercises/templates/exercises/menu.html
+++ b/exercises/templates/exercises/menu.html
@@ -1,24 +1,14 @@
+{% extends 'exercises/base.html' %}
+
 {% load mptt_tags %}
 
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>Khan Academy Exercises</title>
-        <script
-            src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
-            type="text/javascript"></script>
-        <script src="{{STATIC_URL}}js/jtip.js" type="text/javascript"></script>
-        <link href="{{STATIC_URL}}css/base.css" rel="stylesheet" type="text/css" />
-        <script src="{{STATIC_URL}}/khan-exercises/khan-exercise.js"></script>
-    </head>
-    <body>
+{% block content %}
     <ul id="nav">
         {% recursetree nodes %}
             <li>
                 {% if node.url %}
                     {% if node.live %}
-                    <a id="{{node.khan_id}}" name="{{node.display_name}} Example Exercise" class="jTip" href="{{STATIC_URL}}images/exercise-screenshots/{{node.filename}}" onclick="previewExercise('{{node.display_name}}', '{{node.url}}', '{{node.khan_id}}');">
+                    <a id="{{node.khan_id}}" name="{{node.display_name}} Example Exercise" class="jTip" href="{{STATIC_URL}}images/exercise-screenshots/{{node.filename}}" onclick="previewExercise('{{node.display_name}}', '{{node.url}}', '{{STATIC_URL}}images/exercise-screenshots/{{node.filename}}');">
                         {{node.display_name}}
                     </a>
                     {% endif %}
@@ -33,29 +23,18 @@
             </li>
         {% endrecursetree %}
     </ul>
-
     <div id="exercise-preview">
         <h1>Math Topic: <a id="topic" target="_blank">select a topic from the menu</a></h1>
         <h4 style="display: none;">Example question:</h4>
-        <!-- <a id="preview-image" href="" target="_blank"><img /></a> -->
-        <div id="exercise-div">
-            <iframe id="exercise-frame" onload="refresh_title();" frameborder="1" height="100%" width="630px"></iframe>
-        </div>
+        <a id="preview-image" href="" target="_blank"><img /></a>
     </div>
-
     <script>
-        function refresh_title() {
-            $($('#exercise-frame')[0].contentWindow.document).find("*").css('background', 'transparent');
-            $('#exercise-preview>h4').html($($('#exercise-frame')[0].contentWindow.document).find("#current-exercise").html());
-        }
-
-        function previewExercise(display_name, url, name) {
-            console.log('test: ' + display_name + " for " + "{{STATIC_URL}}khan-exercises/exercises/" + name + ".html" + " and " + name);
+        function previewExercise(display_name, url, img_src) {
+            console.log('test');
             $('#topic').html(display_name).attr('href', url);
+            $('#preview-image').attr('href', url);
+            $('#preview-image>img').attr('src', img_src);
             $('#exercise-preview>h4').show();
-            $('#exercise-frame')[0].src = "{{STATIC_URL}}khan-exercises/exercises/" + name + ".html";
-            $($('#exercise-frame')[0].contentWindow.document).find("*").css('background', 'transparent');
         }
     </script>
-    </body>
-</html>
+{% endblock %}
