iframe has fixed 960px height

--- a/exercises/templates/exercises/menu_iframe.html
+++ b/exercises/templates/exercises/menu_iframe.html
@@ -29,7 +29,7 @@
         <h4 style="display: none;">Example question:</h4>
         <!-- <a id="preview-image" href="" target="_blank"><img /></a> -->
         <div id="exercise-div">
-            <iframe id="exercise-frame" onload="refresh_title();" style="height: 100%; width: 70%; border:none;"></iframe>
+            <iframe id="exercise-frame" onload="refresh_title();" style="height: 960px; width: 70%; border:none;"></iframe>
         </div>
     </div>
 
