--- a/exercises/static/css/base.css
+++ b/exercises/static/css/base.css
@@ -1,3 +1,4 @@
+html, body { margin: 0; padding: 0; height: 100%; }
 body {
     font: normal .8em/1.5em Arial, Helvetica, sans-serif;
     color: #666;
